# dungeon_quest

./: .gitignore  INSTRUCTIONS.md  README.md  TROUBLESHOOTING.md  game.js  index.html  package.json  tsconfig.json  vite.config.ts
public/data/: enemies.json  game_config.json  items.json
src/: main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/core/: index.ts
src/core/ecs/: Component.ts  ComponentTypes.ts  Entity.ts  System.ts  World.ts  index.ts
src/core/events/: EventBus.ts  GameEvents.ts  index.ts
src/core/utils/: ObjectPool.ts  Random.ts  Vector2D.ts  index.ts
src/data/: DataLoader.ts  index.ts
src/game/: Dungeon.ts  Enemy.ts  Player.ts
src/game/components/: AIComponent.ts  ColliderComponent.ts  CombatComponent.ts  EnemyComponent.ts  HealthComponent.ts  MovementComponent.ts  PlayerComponent.ts  SpriteComponent.ts  TransformComponent.ts  index.ts
src/game/factory/: EntityFactory.ts
src/game/generation/: DungeonGenerator.ts  index.ts
src/game/managers/: EntityFactory.ts  GameManager.ts  index.ts
src/game/systems/: AISystem.ts  AnimationSystem.ts  CollisionSystem.ts  CombatSystem.ts  HealthSystem.ts  MovementSystem.ts  SpriteSystem.ts  index.ts
src/input/: Command.ts  InputManager.ts  index.ts
src/rendering/: PixiRenderer.ts  index.ts
src/rendering/scenes/: GameScene.ts
src/rendering/utils/: ColorPalette.ts  DrawingUtils.ts  EnemyRenderer.ts  EntityRenderer.ts  PlayerRenderer.ts
src/ui/: App.svelte  global.css
(+4 files in other folders)
