[package]
name = "dungeon-quest"
version = "1.0.0"
description = "A Zelda-inspired dungeon crawler game"
authors = ["you"]
edition = "2021"

[lib]
name = "dungeon_quest_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-shell = "2"
